lab-6-Personalize_your_Recommendations/cloudformation_template.yml
AWSTemplateFormatVersion: 2010-09-09
Parameters:
  AppEnvironmentName:
    Description: An environment name that will be prefixed to resource names
    Type: String
    Default: Amazon Personalize Lab
  DjangoAdminLogin:
    Description: Please enter the name of your Django Administrator User (case sensitive)
    Type: String
    Default: Admin
  DjangoAdminPassword:
    NoEcho: true
    Description: >-
      Please enter the login password for your Django Administrator User (4-12
      chars; lower-case,  upper-case and numerals)
    Type: String
    MinLength: 4
    MaxLength: 12
    AllowedPattern: '^[a-zA-Z0-9]*$'
    Default: Pass
  DjangoEmailAddress:
    Description: Please enter the email address for your Django Administrator User
    Type: String
    Default: blank@example.com
  VpcCIDR:
    Description: Please enter the IP range (CIDR notation) for this VPC
    Type: String
    Default: 10.192.0.0/16
  PublicSubnet1CIDR:
    Description: >-
      Please enter the IP range (CIDR notation) for the public subnet in the
      first Availability Zone
    Type: String
    Default: 10.192.10.0/24
  PublicSubnet2CIDR:
    Description: >-
      Please enter the IP range (CIDR notation) for the public subnet in the
      second Availability Zone
    Type: String
    Default: 10.192.11.0/24
  PrivateSubnet1CIDR:
    Description: >-
      Please enter the IP range (CIDR notation) for the private subnet in the
      first Availability Zone
    Type: String
    Default: 10.192.20.0/24
  PrivateSubnet2CIDR:
    Description: >-
      Please enter the IP range (CIDR notation) for the private subnet in the
      second Availability Zone
    Type: String
    Default: 10.192.21.0/24
  SSHLocation:
    Description: Lockdown SSH access to the servers
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 0.0.0.0/0
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: must be a valid CIDR range of the form x.x.x.x/x.
  InstanceAMI:
    Description: EC2 instance AMI for auto-scaling
    Type: String
    Default: ami-0a1bbc59157225e69
  SnapshotArn:
    Description: ARN of the Public RDS Snapshot
    Type: String
    Default: 'arn:aws:rds:us-east-1:302460114512:snapshot:londonsummitbaseline'
Resources:
  VPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Ref AppEnvironmentName
  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value: !Ref AppEnvironmentName
  InternetGatewayAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC
  PublicSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select 
        - 0
        - !GetAZs ''
      CidrBlock: !Ref PublicSubnet1CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub '${AppEnvironmentName} Public Subnet (AZ1)'
  PublicSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select 
        - 1
        - !GetAZs ''
      CidrBlock: !Ref PublicSubnet2CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub '${AppEnvironmentName} Public Subnet (AZ2)'
  PrivateSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select 
        - 0
        - !GetAZs ''
      CidrBlock: !Ref PrivateSubnet1CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub '${AppEnvironmentName} Private Subnet (AZ1)'
  PrivateSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select 
        - 1
        - !GetAZs ''
      CidrBlock: !Ref PrivateSubnet2CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub '${AppEnvironmentName} Private Subnet (AZ2)'
  NatGateway1EIP:
    Type: 'AWS::EC2::EIP'
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc
  NatGateway1:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      AllocationId: !GetAtt 
        - NatGateway1EIP
        - AllocationId
      SubnetId: !Ref PublicSubnet1
  PublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub '${AppEnvironmentName} Public Routes'
  DefaultPublicRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
  PublicSubnet1RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1
  PublicSubnet2RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2
  PrivateRouteTable1:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub '${AppEnvironmentName} Private Routes (AZ1)'
  DefaultPrivateRoute1:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway1
  PrivateSubnet1RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId: !Ref PrivateSubnet1
  PrivateRouteTable2:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub '${AppEnvironmentName} Private Routes (AZ2)'
  DefaultPrivateRoute2:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway1
  PrivateSubnet2RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      SubnetId: !Ref PrivateSubnet2
  ApplicationLoadBalancer:
    Type: 'AWS::ElasticLoadBalancingV2::LoadBalancer'
    Properties:
      Name: Personalize-Demo-ALB
      Subnets:
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2
      SecurityGroups:
        - !Ref LoadBalancerSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub '${AppEnvironmentName} Personalize ALB'
  ALBListener:
    Type: 'AWS::ElasticLoadBalancingV2::Listener'
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref ALBTargetGroup
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: '80'
      Protocol: HTTP
  ALBTargetGroup:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    Properties:
      HealthCheckPath: /recommend/
      HealthCheckIntervalSeconds: 30
      HealthCheckTimeoutSeconds: 25
      HealthyThresholdCount: 3
      Port: 8000
      Protocol: HTTP
      UnhealthyThresholdCount: 5
      VpcId: !Ref VPC
  LoadBalancerSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enable HTTP access on port 80
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: '0'
          ToPort: '65535'
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub '${AppEnvironmentName} ALB Security Group'
  InstanceSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enable HTTP access and SSH access
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '8000'
          ToPort: '8000'
          SourceSecurityGroupId: !Ref LoadBalancerSecurityGroup
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: !Ref SSHLocation
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: '0'
          ToPort: '65535'
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub '${AppEnvironmentName} Server Security Group'
  AutoScalingGroup:
    Type: 'AWS::AutoScaling::AutoScalingGroup'
    Properties:
      VPCZoneIdentifier:
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2
      LaunchConfigurationName: !Ref LaunchConfig
      MinSize: '1'
      MaxSize: '1'
      DesiredCapacity: '1'
      Tags:
        - Key: Name
          Value: !Sub '${AppEnvironmentName}'
          PropagateAtLaunch: 'true'
        - Key: Personalize
          Value: Demo
          PropagateAtLaunch: 'true'
      TargetGroupARNs:
        - !Ref ALBTargetGroup
  LaunchConfig:
    Type: 'AWS::AutoScaling::LaunchConfiguration'
    Properties:
      ImageId: !Ref InstanceAMI
      InstanceType: m4.xlarge
      AssociatePublicIpAddress: 'true'
      IamInstanceProfile: !Ref PersonalizeInstanceProfile
      SecurityGroups:
        - !Ref InstanceSecurityGroup
      UserData: !Base64 
        'Fn::Sub': >
          #!/bin/sh

          privateIP=$(curl http://169.254.169.254/latest/meta-data/local-ipv4)

          albDNS=$(aws elbv2 describe-load-balancers --region us-east-1 --query
          'LoadBalancers[?LoadBalancerName==`Personalize-Demo-ALB`].DNSName'
          --output text)

          rdsDNS=$(aws rds describe-db-instances --region us-east-1 --query
          'DBInstances[?DBName==`videorec`].Endpoint.Address' --output text)

          cd /home/ec2-user/personalize-video-recs/videorecs

          sed -i s/PRIVATEIP/$privateIP/g runmyserver

          sed -i s/POSTGRESDNS/$rdsDNS/g pgcli

          cd videorecs

          sed -i s/PRIVATEIP/$privateIP/g settings.py

          sed -i s/ALBDNS/$albDNS/g settings.py

          sed -i s/POSTGRESDNS/$rdsDNS/g settings.py

          touch /var/log/runmyserver.log

          chmod 777 /var/log/runmyserver.log

          touch /var/log/runmyserver1.log

          chmod 777 /var/log/runmyserver1.log

          runuser -l ec2-user -c 'cd personalize-video-recs/videorecs;
          ./runmyserver > /var/log/runmyserver.log 2>&1 &'

          sleep 120

          runuser -l ec2-user -c 'cd personalize-video-recs/videorecs;
          ./runmyserver > /var/log/runmyserver1.log 2>&1 &'

          sleep 5

          runuser -l ec2-user -c 'cd personalize-video-recs/videorecs; python
          manage.py createsuperuser2 --username ${DjangoAdminLogin} --password
          ${DjangoAdminPassword} --noinput --email "${DjangoEmailAddress}" '
  PersonalizeEC2Role:
    Type: 'AWS::IAM::Role'
    Properties:
      RoleName: AmazonLabInstanceRole
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      Path: /
      ManagedPolicyArns:
        - 'arn:aws:iam::aws:policy/AmazonS3FullAccess'
        - 'arn:aws:iam::aws:policy/service-role/AmazonPersonalizeFullAccess'
        - 'arn:aws:iam::aws:policy/IAMReadOnlyAccess'
        - 'arn:aws:iam::aws:policy/AmazonEC2ReadOnlyAccess'
        - 'arn:aws:iam::aws:policy/AmazonRDSReadOnlyAccess'
  PersonalizeInstanceProfile:
    Type: 'AWS::IAM::InstanceProfile'
    Properties:
      Path: /
      Roles:
        - !Ref PersonalizeEC2Role
  ExtraIamForSagemaker:
    Type: 'AWS::IAM::Policy'
    Properties:
      PolicyName: ExtraIamForSagemaker
      PolicyDocument:
        Statement:
          - Effect: Allow
            Action:
              - 'iam:CreateRole'
              - 'iam:AttachRolePolicy'
              - 'iam:PassRole'
            Resource: '*'
      Roles:
        - !Ref PersonalizeSagemakeRole
  PersonalizeSagemakeRole:
    Type: 'AWS::IAM::Role'
    Properties:
      RoleName: AmazonLabSageMakerRole
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - sagemaker.amazonaws.com
                - personalize.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      Path: /
      ManagedPolicyArns:
        - 'arn:aws:iam::aws:policy/AmazonS3FullAccess'
        - 'arn:aws:iam::aws:policy/service-role/AmazonPersonalizeFullAccess'
        - 'arn:aws:iam::aws:policy/AmazonSageMakerFullAccess'
  RDSAccessSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Instance to RDS Access
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '0'
          ToPort: '65535'
          SourceSecurityGroupId: !Ref InstanceSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub '${AppEnvironmentName} RDS Security Group'
  DbSubnetGroup:
    Type: 'AWS::RDS::DBSubnetGroup'
    Properties:
      DBSubnetGroupDescription: !Join 
        - ''
        - - 'RDS Subnet Group for '
          - !Ref AppEnvironmentName
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
      Tags:
        - Key: Name
          Value: !Ref AppEnvironmentName
  DbInstance:
    Type: 'AWS::RDS::DBInstance'
    DeletionPolicy: Snapshot
    DependsOn:
      - DbSubnetGroup
      - RDSAccessSecurityGroup
    Properties:
      DBSnapshotIdentifier: !Ref SnapshotArn
      AllowMajorVersionUpgrade: false
      AutoMinorVersionUpgrade: true
      BackupRetentionPeriod: 7
      DBInstanceClass: db.m4.xlarge
      DBInstanceIdentifier: amazonPersonalizeLab
      DBSubnetGroupName: !Ref DbSubnetGroup
      MultiAZ: false
      Port: 5432
      PubliclyAccessible: false
      StorageEncrypted: false
      StorageType: gp2
      VPCSecurityGroups:
        - !Ref RDSAccessSecurityGroup
      Tags:
        - Key: Name
          Value: !Ref AppEnvironmentName
  SageMakerNotebookInstance:
    Type: 'AWS::SageMaker::NotebookInstance'
    Properties:
      InstanceType: ml.t2.large
      RoleArn: !GetAtt 
        - PersonalizeSagemakeRole
        - Arn
      NotebookInstanceName: Personalize-lab-notebook
      DefaultCodeRepository: 'https://github.com/saidach/AI_ML_Workshops.git'
  PersonalizePreCreateLambdaFunction:
    Type: 'AWS::Lambda::Function'
    Properties:
      Handler: personalize-lab-preprovision.lambda_handler
      Role: !GetAtt 
        - LambdaExecutionRole
        - Arn
      Code:
        S3Bucket: ee-assets-prod-us-east-1
        S3Key: >-
          modules/22503d96e66843d8b576f4430f3e4ec7/v3/personalize-lab-preprovision.zip
      Runtime: python3.7
      Timeout: 900
      FunctionName: personalize-preprovision-function
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 9a984d2f-2d8e-4288-9bed-4ba1dc74f726
  LambdaExecutionRole:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - lambda.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      Path: /
      Policies:
        - PolicyName: root
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Sid: VisualEditor0
                Effect: Allow
                Action:
                  - 'logs:CreateLogStream'
                  - 'logs:PutLogEvents'
                Resource: '*'
              - Sid: VisualEditor1
                Effect: Allow
                Action:
                  - 'personalize:*'
                  - 'iam:CreatePolicy'
                  - 'iam:PassRole'
                  - 'iam:CreateRole'
                  - 'iam:AttachRolePolicy'
                Resource: '*'
              - Sid: VisualEditor2
                Effect: Allow
                Action: 'logs:CreateLogGroup'
                Resource: '*'
  ScheduledRule:
    Type: 'AWS::Events::Rule'
    Properties:
      Description: ScheduledRule
      ScheduleExpression: rate(10 minutes)
      State: ENABLED
      Targets:
        - Arn: !GetAtt 
            - PersonalizePreCreateLambdaFunction
            - Arn
          Id: TargetFunctionV1
  PermissionForEventsToInvokeLambda: 
    Type: AWS::Lambda::Permission
    Properties: 
      FunctionName: 
        Ref: "PersonalizePreCreateLambdaFunction"
      Action: "lambda:InvokeFunction"
      Principal: "events.amazonaws.com"
      SourceArn: 
        Fn::GetAtt: 
          - "ScheduledRule"
          - "Arn"
Outputs:
  SageMakerNotebookInstanceId:
    Value: !Ref SageMakerNotebookInstance
  AppEntrypoint:
    Description: User entrypoint for web-application
    Value: !Join 
      - ''
      - - !GetAtt 
          - ApplicationLoadBalancer
          - DNSName
        - /recommend
  AppEntrypointAdmin:
    Description: Admin entrypoint for web-application
    Value: !Join 
      - ''
      - - !GetAtt 
          - ApplicationLoadBalancer
          - DNSName
        - /admin
